# cfpm

./: .codeclimate.yml  .coveragerc  .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: python-check.yml  python-publish.yml
cfpm/: __init__.py  console.py  drivers.py  exceptions.py  log.py  logging.py  projects.py  utils.py
cfpm/console/: __init__.py  __main__.py  build.py  cli.py  new.py  version.py
tests/: test_cfpm.py  test_version.py
