[tool.poetry]
name = "cfpm"
version = "0.1.0"
description = "The C-Family Package Manager."
license = "MIT"
authors = ["Yi Cao <caoyi06@qq.com>"]

[tool.poetry.dependencies]
python = "^3.6.2"
click = "^8.0.1"
click-log = "^0.3.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.9.2"
mypy = "^0.910"
black = "^21.7b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
cfpm = "cfpm.console:cli"
